force-app/main/default/objects/oc_eol__Exact_Online_Mapping__mdt/oc_eol__Exact_Online_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Exact Online Mapping</label>
    <pluralLabel>Exact Online Mappings</pluralLabel>
</CustomObject>