force-app/main/default/objects/oc_eol__Exact_Online_Mapping__mdt/fields/oc_eol__Compound_Field_Component_Name__c.field-meta.xml
<CustomField>
    <fullName>oc_eol__Compound_Field_Component_Name__c</fullName>
    <inlineHelpText>Fill this field only when the selected Salesforce Object Field is a compound field.
Mention the API name of the field which needs to be mapped</inlineHelpText>
    <label>Compound Field Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>