force-app/main/default/objects/oc_eol__Exact_Online_Mapping__mdt/fields/oc_eol__Exact_Online_Entity__c.field-meta.xml
<CustomField>
    <fullName>oc_eol__Exact_Online_Entity__c</fullName>
    <inlineHelpText>Exact Online API Name</inlineHelpText>
    <label>Exact Online Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>SalesItemPrice</fullName>
            </value>
            <value>
                <fullName>SalesOrder</fullName>
            </value>
            <value>
                <fullName>SalesOrderLine</fullName>
            </value>
            <value>
                <fullName>Item</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>