force-app/main/default/objects/oc_eol__Exact_Online_Mapping__mdt/fields/oc_eol__Exact_Online_Entity_Field__c.field-meta.xml
<CustomField>
    <fullName>oc_eol__Exact_Online_Entity_Field__c</fullName>
    <inlineHelpText>The API field name of the Exact Online Entity mentioned</inlineHelpText>
    <label>Exact Online Entity Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>