force-app/main/default/objects/oc_eol__Exact_Online_Mapping__mdt/fields/oc_eol__Is_Secondary_Key__c.field-meta.xml
<CustomField>
    <fullName>oc_eol__Is_Secondary_Key__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Secondary Key</label>
    <type>Checkbox</type>
</CustomField>