force-app/main/default/objects/oc_eol__Exact_Online_Mapping__mdt/fields/oc_eol__Salesforce_Object__c.field-meta.xml
<CustomField>
    <fullName>oc_eol__Salesforce_Object__c</fullName>
    <inlineHelpText>Select the Salesforce object to which you want to map to</inlineHelpText>
    <label>Salesforce Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Exact_Online_Mappings</relationshipLabel>
    <relationshipName>Exact_Online_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>