force-app/main/default/objects/oc_eol__Exact_Online_Mapping__mdt/fields/oc_eol__Salesforce_Object_Field__c.field-meta.xml
<CustomField>
    <fullName>oc_eol__Salesforce_Object_Field__c</fullName>
    <inlineHelpText>Select the field name which should be mapped</inlineHelpText>
    <label>Salesforce Object Field</label>
    <metadataRelationshipControllingField>oc_eol__Exact_Online_Mapping__mdt.oc_eol__Salesforce_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Exact_Online_Mappings</relationshipLabel>
    <relationshipName>Exact_Online_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>