force-app/main/default/objects/oc_eol__Exact_Online_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>oc_eol__Salesforce_Object__c</columns>
    <columns>oc_eol__Salesforce_Object_Field__c</columns>
    <columns>oc_eol__Compound_Field_Component_Name__c</columns>
    <columns>oc_eol__Exact_Online_Entity__c</columns>
    <columns>oc_eol__Exact_Online_Entity_Field__c</columns>
    <columns>oc_eol__Is_Primary_Key__c</columns>
    <columns>oc_eol__Is_Secondary_Key__c</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>IsProtected</columns>
    <columns>oc_eol__Is_Timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>